# vereinsflieger-oidc-bridge

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  jwt.rs  main.rs  store.rs  vf_client.rs
src/oidc/: authorize.rs  discovery.rs  jwks.rs  mod.rs  token.rs  userinfo.rs
