[package]
name = "vf-oidc-bridge"
version = "0.1.0"
edition = "2021"
description = "OIDC Identity Provider bridge for Vereinsflieger.de authentication"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
url = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
subtle = "2"
toml = "0.8"
